<resources>
    <string name="app_name">ArtoZ</string>
    <string name="input_email">Masukkan Email</string>
    <string name="input_password">Masukkan Password</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="register">Register</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="input_nama">Masukkan Nama</string>
    <string name="header_image_desc">Header Image</string>
    <string name="to_loginactivity">To LoginActivity</string>
    <string name="to_registeractivity">To RegisterActivity</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="desc_icon">Deskripsi Icon</string>
    <string name="back">Kembali</string>
    <string name="expense">Pengeluaran</string>
    <string name="income">Pemasukan</string>
    <string name="nominal">Nominal</string>
    <string name="save">Simpan</string>
    <string name="scan">Scan OCR</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="balance">Saldo</string>
    <string name="no_transaction">Belum ada transaksi</string>
    <string name="menu">Menu</string>
    <string name="total_income">Total Pemasukan: %s</string>
    <string name="total_expense">Total Pengeluaran: %s</string>
    <string name="income_icon">Income Icon</string>
    <string name="delete_data">Hapus data</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="ikon_jenis">Ikon Jenis</string>
    <string name="total_pemasukan_rp_0">Total Pemasukan: Rp 0</string>
    <string name="expense_icon">Expense Icon</string>
    <string name="total_pengeluaran_rp_0">Total Pengeluaran: Rp 0</string>
    <string name="tambah_transaksi">Tambah Transaksi</string>
    <string name="rekap_diagram">Rekap Diagram</string>
    <string name="tagline">Comprehensive Financial\nTracking from A to Z</string>
    <string name="deskripsi_header">Header Halaman User</string>
    <string name="logo">Logo ArtoZ</string>
    <string name="desc_HeadRegist">Header Halaman Register</string>
    <string name="desc_HeaderLogin">Header Halaman Login</string>
</resources>