<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="16dp"
    card_view:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@drawable/list"
        android:orientation="horizontal"
        android:padding="16dp"
        tools:ignore="TextSizeCheck">

        <!-- Ikon Jenis Transaksi -->
        <ImageView
            android:id="@+id/iv_type_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/ikon_jenis"
            tools:ignore="ImageContrastCheck" />

        <!-- Informasi Transaksi -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/type"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textColor="#6D4C41"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Tombol Hapus -->
        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/delete_data"
            android:padding="4dp"
            android:src="@drawable/baseline_delete_24"
            card_view:tint="@color/dark_red" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
